[package]
name = "slight-keyvalue"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
slight-file = { workspace = true }
slight-common = { workspace = true }
slight-runtime-configs = { workspace = true, optional = true }
wit-bindgen-wasmtime = { workspace = true, optional = true }
wit-error-rs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
wasmedge-sdk = { workspace = true }
invoke-witc = { workspace = true }
witc-abi = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
# kv.azblob deps
azure_storage_blobs = { version = "0.10", optional = true }
azure_storage = { version = "0.10", optional = true }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
# keyvalue.filesystem deps
serde_json = { version = "1", optional = true }
# kv.awsdynamodb deps
aws-config = { version = "0.54", optional = true }
aws-sdk-dynamodb = { version = "0.24", optional = true }
# kv.redis deps
redis = { version = "0.22", optional = true }

[features]
default = ["filesystem"]
filesystem = ["serde_json"]
azblob = ["azure_storage_blobs", "azure_storage", "bytes", "futures", "dep:slight-runtime-configs"]
awsdynamodb = ["aws-config", "aws-sdk-dynamodb", "dep:slight-runtime-configs"]
redis = ["dep:redis", "dep:slight-runtime-configs"]
